--- a/templates/main/main.html
+++ b/templates/main/main.html
@@ -38,9 +38,9 @@
                 <tbody>
                     <tr>
                         <th>{{ plan.physic_activity.program }}</th>
-                        <th><span class="glyphicon glyphicon-envelope"></span></th>
-                        <th>3</th>
-                        <th>4</th>
+                        <th>{{ manager.week_begin }}</span></th>
+                        <th>{{ manager.week_today }}</th>
+                        <th>{{ manager.week_1 }}</th>
                         <th>5</th>
                         <th>6</th>
                         <th>7</th>
