--- a/templates/main/main.html
+++ b/templates/main/main.html
@@ -1,75 +1,46 @@
 ﻿<!DOCTYPE html>
 <html lang="en">
-  <head>
+<head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
     <title>Week Planner</title>
 
-      <!-- Bootstrap -->
-      {% load staticfiles %}
+    <!-- Bootstrap -->
+    {% load staticfiles %}
     <link href="{% static 'bootstrap/css/bootstrap.min.css' %}" rel="stylesheet">
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
-      <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
-      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+    <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
+    <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
-  </head>
-    <body>
-        <div class="container-fluid" role="main">
-            <div class="jumbotron">
-                <h1>Week Planner</h1>
-            </div>
-            <table class="table table-bordered">
-                <thead>
-                    <tr>
-                        <th>Monday</th>
-                        <th>Tuesday</th>
-                        <th>Wednesday</th>
-                        <th>Thursday</th>
-                        <th>Friday</th>
-                        <th>Saturday</th>
-                        <th>Sunday</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr>
-                        <th>{{ plan.physic_activity.program }}</th>
-                        <th>{{ manager.week_begin }}</span></th>
-                        <th>{{ manager.week_today }}</th>
-                        <th>{{ manager.week_1 }}</th>
-                        <th>5</th>
-                        <th>6</th>
-                        <th>7</th>
-                    </tr>      
-                    <tr>
-                        <th>{{ plan.educational_activity }}</th>
-                        <th><span class="glyphicon glyphicon-envelope"></span></th>
-                        <th>3</th>
-                        <th>4</th>
-                        <th>5</th>
-                        <th>6</th>
-                        <th>7</th>
-                    </tr>   
-                    <tr>
-                        <th>{{ plan.single_task }}</th>
-                        <th><span class="glyphicon glyphicon-envelope"></span></th>
-                        <th>3</th>
-                        <th>4</th>
-                        <th>5</th>
-                        <th>6</th>
-                        <th>10</th>
-                    </tr>                 
-                </tbody>
-            </table>
-        </div>
+</head>
+<body>
+<div class="container-fluid" role="main">
+    <div class="jumbotron">
+        <h1>Week Planner</h1>
+    </div>
+    <table class="table">
+        <thead>
+        <tr>
+            {% for day_frame in day_frame_templates %}
+            <th width="10%">
+                {{ day_frame }}
+            </th>
+            {% endfor %}
+        </tr>
+        </thead>
+    </table>
+    </div>
 
-        <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-        <!-- Include all compiled plugins (below), or include individual files as needed -->
-        <script src="{% static 'bootstrap/js/bootstrap.min.js' %}"></script>
-    </body>
+</div>
+
+<!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+<!-- Include all compiled plugins (below), or include individual files as needed -->
+<script src="{% static 'bootstrap/js/bootstrap.min.js' %}"></script>
+</body>
 </html>
