--- a/templates/main/physical_activity_result_form.html
+++ b/templates/main/physical_activity_result_form.html
@@ -79,8 +79,8 @@
         </div>
         <div class="form-group">
             <div class="col-sm-offset-2 col-sm-10">
-                <button type="submit" value="save" class="btn btn-primary">Submit</button>
-                <button type="submit" value="delete" class="btn btn-danger">Delete</button>
+                <button type="submit" name="respond" value="confirm" class="btn btn-primary">Submit</button>
+                <button type="submit" name="respond" value="delete" class="btn btn-danger">Delete</button>
             </div>
         </div>
     </form>
