--- a/templates/main/day_frame_template.html
+++ b/templates/main/day_frame_template.html
@@ -13,7 +13,11 @@
            class="list-group-item {% if day_plan.IsPast %}panel-default{% endif %}
                                   {% if day_plan.IsToday %}panel-success{% endif %}
                                   {% if day_plan.IsFuture %}panel-info{% endif %}">
-            {{ day_plan.physical_activity_result }}&zwnj;
+            <font color="{% if not day_plan.IsFuture and day_plan.physical_activity_result.result == 'C' %}#54C571{% endif %}
+                         {% if not day_plan.IsFuture and day_plan.physical_activity_result.result == 'U' %}#E77471{% endif %}
+                         {% if day_plan.IsFuture %}#AFDCEC{% endif %}">
+                {{ day_plan.physical_activity_result }}&zwnj;
+            </font>
         </a>
         <a href="{% if not day_plan.educational_activity_result and not day_plan.IsPast %}
                     {% url 'educational_activity_result' day_plan.date.year day_plan.date.month day_plan.date.day %}
